traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: Missing closing brace `}' assumed here
def murNord(){
^Snake:1: error: expected class or object definition
def murNord(){
^